
syntax = "proto3";

package book;

option go_package="github.com/josemqz/SistDistribuidos/Lab2/book;book";


message Chunk{
    string remitente = 1;
    string nombreLibro = 2;
    int32 numChunk = 3;
    int32 size = 4;
    string contenido = 5;
}

message ChunksInfo{
    string remitente = 1;
    string nombreLibro = 2;
    int32 cantidadChunks = 3;
    string info = 4;
}

message ACK{
    string ok = 1;
}

message LibroInfo{
    string nombreLibro = 1;
    int32 sizeLibro = 2;
}

service BookService{
    
    rpc generarPropuesta(LibroInfo) returns (ACK) {}

    //enviar propuesta de un datanode a x 

    rpc RecibirChunksInfo(ChunksInfo) returns (ACK) {}
    rpc RecibirChunk(Chunk) returns (ACK) {}

    //exclusi√≥n mutua (?)

}